# polymarket

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODEBASE_ISSUES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  data-api-openapi.yaml  dune-project  gamma-openapi.json  polymarket.opam  polymarket.opam.template
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  windows.yml
examples/: bridge_api_demo.ml  clob_api_demo.ml  data_api_demo.ml  dune  gamma_api_demo.ml  logger.ml  rfq_demo.ml  rtds_demo.ml  sports_demo.ml  test_demo.ml  wss_demo.ml
lib/: clob_client.ml  clob_client.mli  clob_order_builder.ml  clob_order_builder.mli  clob_types.ml  clob_types.mli  data_api_client.ml  data_api_client.mli  data_api_params.ml  data_api_params.mli  data_api_types.ml  data_api_types.mli  data_client.ml  data_client.mli  data_types.mli  dune  gamma_client.mli  gamma_types.ml  gamma_types.mli  http_builder.ml  http_client.ml  http_client.mli  order_signing.mli  polymarket.ml  polymarket.mli  primitives.ml  primitives.mli  rate_limit_presets.ml  rate_limit_presets.mli  rate_limiter.mli  rfq_client.ml  rfq_client.mli  rfq_order_builder.ml  rfq_order_builder.mli  rfq_types.mli  rl_gcra.ml  rl_gcra.mli  rl_matcher.ml  rtds_client.ml  rtds_client.mli  (+5 more)
lib/clob_api/: auth.ml  auth.mli  auth_types.ml  auth_types.mli  client.ml  client.mli  client_typestate.ml  client_typestate.mli  crypto.ml  crypto.mli  dune  endpoints.ml  endpoints.mli  order_builder.ml  order_builder.mli  params.ml  params.mli  types.ml  types.mli
lib/common/: auth.mli  bounded.mli  crypto.ml  crypto.mli  dune  error.ml  error.mli  http_client.ml  http_client.mli  logger.ml  logger.mli  primitives.ml  primitives.mli
lib/data_api/: client.ml  client.mli  dune  endpoints.ml  logger.ml  logger.mli  params.ml  params.mli  types.ml  types.mli
lib/gamma_api/: client.ml  client.mli  dune  endpoints.ml  logger.ml  logger.mli  params.ml  params.mli  query.ml  query.mli  responses.ml  responses.mli  types.ml  types.mli
lib/generic/http_client/: builder.ml  builder.mli  client.ml  client.mli  dune  json.ml  log.ml
lib/generic/logger/: dune  logger.ml  logger.mli
lib/generic/rate_limiter/: dune  gcra.ml  gcra.mli  matcher.mli  presets.ml  rate_limiter.ml  rate_limiter.mli  state.mli  types.mli
lib/generic/websocket/: connection.ml  connection.mli  dune  frame.mli  handshake.ml  handshake.mli  log.ml  logger.ml
lib/http/: client.ml  client.mli  dune  json.ml  json.mli  request.ml  request.mli
lib/http_client/: builder.ml  builder.mli  client.ml  client.mli  dune  logger.ml  logger.mli
lib/polymarket/: auth.ml  auth.mli  clob_types.mli  constants.mli  data_client.ml  data_types.mli  dune  gamma_client.ml  gamma_types.ml  gamma_types.mli  http_json.ml  polymarket.ml  polymarket.mli  primitives.ml  primitives.mli  rfq_types.ml  wss_client.mli
lib/polymarket/bridge/: client.ml  client.mli  types.ml  types.mli
lib/polymarket/clob/: client.ml  client.mli  clob_client.ml  clob_types.ml  dune  order_builder.ml  order_builder.mli  types.ml  types.mli
lib/polymarket/clob_api/: client.ml  client.mli  endpoints.ml  endpoints.mli  order_builder.ml  order_builder.mli  types.ml  types.mli
lib/polymarket/common/: auth.ml  auth.mli  bounded.ml  constants.ml  crypto.ml  crypto.mli  dune  http_builder.ml  http_builder.mli  logger.ml  logger.mli  order_signing.ml  order_signing.mli  primitives.ml  primitives.mli  rate_limit_presets.ml  rate_limit_presets.mli
lib/polymarket/data/: client.ml  client.mli  data_client.ml  data_types.ml  types.ml  types.mli
lib/polymarket/data_api/: client.ml  client.mli  endpoints.mli  types.ml  types.mli
lib/polymarket/gamma/: client.ml  client.mli  dune  gamma_client.ml  gamma_client.mli  gamma_types.ml  types.ml  types.mli
lib/polymarket/gamma_api/: client.ml  client.mli  endpoints.ml  endpoints.mli  types.mli
lib/polymarket/rfq/: client.ml  client.mli  dune  order_builder.ml  order_builder.mli  rfq_client.ml  rfq_types.ml  types.ml  types.mli
lib/polymarket/rfq_api/: types.ml
lib/polymarket/rtds/: client.ml  client.mli  dune  rtds_client.ml  types.ml  types.mli
lib/polymarket/rtds_api/: client.ml  dune  types.ml  types.mli
lib/polymarket/sports/: client.ml  client.mli  types.ml  types.mli
lib/polymarket/wss/: client.ml  client.mli  dune  types.ml  types.mli  wss_client.ml
lib/polymarket/wss_api/: client.mli  dune  types.mli
lib/rate_limiter/: builder.ml  builder.mli  dune  matcher.ml  rate_limiter.ml  rate_limiter.mli  rl_builder.ml  rl_builder.mli  rl_matcher.mli  rl_state.ml  rl_state.mli  state.ml  types.ml
lib/websocket_client/: client.ml  connection.ml  dune  frame.ml  handshake.ml  types.ml
lib/ws/: connection.ml  connection.mli  dune  frame.ml  frame.mli  handshake.ml  ws_connection.ml
lib/wss_client/: client.ml  client.mli  connection.ml  connection.mli  dune  types.ml  types.mli
ppx/ppx_polymarket_enum/: dune  ppx_polymarket_enum.ml
scripts/: pre-commit
src/: clob_client.mli  crypto.ml  crypto.mli  data_client.mli  data_types.ml  data_types.mli  gamma_client.ml  gamma_client.mli  http_builder.mli  http_json.mli  polymarket.ml  polymarket.mli  primitives.ml  primitives.mli  rfq_client.ml  rfq_client.mli  rfq_types.mli  rtds_client.mli  wss_client.ml
test/: dune  test_runner.ml  test_utils.ml
test/bridge_api/: dune  test_types.ml
test/clob_api/: dune  test_crypto.ml  test_types.ml
test/common/: dune  test_http_client.ml  test_primitives.ml
test/data_api/: dune  test_params.ml  test_types.ml
test/gamma_api/: dune  test_params.ml  test_types.ml
test/sports/: dune  test_types.ml
test/websocket_client/: dune  test_frame.ml  test_types.ml
