(executable
 (name data_api_demo)
 (modules data_api_demo logger)
 (libraries polymarket unix eio_main mirage-crypto-rng.unix logs))

(executable
 (name gamma_api_demo)
 (modules gamma_api_demo logger)
 (libraries polymarket unix eio_main mirage-crypto-rng.unix logs))

(executable
 (name clob_api_demo)
 (modules clob_api_demo logger)
 (libraries polymarket unix eio_main mirage-crypto-rng.unix logs))

(executable
 (name wss_demo)
 (modules wss_demo logger)
 (libraries polymarket unix eio_main mirage-crypto-rng.unix logs yojson))

(executable
 (name rtds_demo)
 (modules rtds_demo logger)
 (libraries polymarket unix eio_main mirage-crypto-rng.unix logs))
