(library
 (name polymarket)
 (public_name polymarket)
 (libraries
  ; Core
  eio
  eio_main
  logs
  logs.fmt
  fmt
  uri
  unix
  ptime
  ; HTTP
  cohttp-eio
  tls-eio
  ca-certs
  ; Crypto
  digestif
  secp256k1-internal
  base64
  hex
  cstruct
  ; JSON
  yojson
  ppx_yojson_conv_lib)
 (private_modules
  ; Rate limiter internals
  rl_builder
  rl_gcra
  rl_matcher
  rl_state
  rl_types
  ; HTTP internals
  http_builder
  http_client
  http_json
  ; WebSocket internals
  ws_connection
  ws_frame
  ws_handshake
  ; Common internals
  auth
  constants
  crypto
  error
  order_signing
  ; API internals
  gamma_types
  data_types
  clob_order_builder
  rfq_order_builder)
 (preprocess
  (pps ppx_yojson_conv ppx_deriving.show ppx_deriving.eq ppx_polymarket_enum)))
