(include_subdirs unqualified)

(library
 (name polymarket)
 (public_name polymarket)
 (libraries
  ; Internal libraries
  polymarket.rate_limiter
  polymarket.http
  polymarket.ws
  ; Core
  eio
  eio_main
  logs
  logs.fmt
  fmt
  uri
  unix
  ptime
  ; HTTP
  cohttp-eio
  tls-eio
  ca-certs
  ; Crypto
  digestif
  secp256k1-internal
  base64
  hex
  cstruct
  ; JSON
  yojson
  ppx_yojson_conv_lib)
 (private_modules
  ; Common internals
  auth
  constants
  crypto
  error
  order_signing
  ; API internals
  clob_order_builder
  rfq_order_builder)
 (preprocess
  (pps ppx_yojson_conv ppx_deriving.show ppx_deriving.eq ppx_polymarket_enum)))
