(include_subdirs qualified)

(library
 (name polymarket)
 (public_name polymarket)
 (libraries
  ; Internal libraries
  polymarket.rate_limiter
  polymarket.http
  polymarket.ws
  ; Core
  eio
  eio_main
  logs
  logs.fmt
  fmt
  uri
  unix
  ptime
  ; HTTP
  cohttp-eio
  tls-eio
  ca-certs
  ; Crypto
  digestif
  secp256k1-internal
  base64
  hex
  cstruct
  mirage-crypto-rng
  ; JSON
  yojson
  ppx_yojson_conv_lib)
 (preprocess
  (pps ppx_yojson_conv ppx_deriving.show ppx_deriving.eq ppx_polymarket_enum)))
