(library
 (name polymarket_wss)
 (public_name polymarket.wss)
 (libraries
  polymarket_common
  polymarket_clob
  eio
  eio_main
  yojson
  ppx_yojson_conv_lib
  tls-eio
  ca-certs
  cstruct
  digestif
  base64
  logs)
 (preprocess
  (pps ppx_yojson_conv ppx_deriving.show ppx_deriving.eq ppx_polymarket_enum)))
